--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expo-starter",
-  "license": "0BSD",
+  "license": "MIT",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
