--- a/package.json
+++ b/package.json
@@ -19,24 +19,24 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
-    "expo": "~52.0.11",
+    "expo": "^52.0.18",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
-    "expo-dev-client": "~5.0.4",
+    "expo-dev-client": "~5.0.6",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.9",
-    "expo-splash-screen": "~0.29.13",
+    "expo-router": "4.0.11",
+    "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.4",
+    "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
     "i18next": "^24.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^15.1.2",
-    "react-native": "0.76.3",
+    "react-native": "0.76.5",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-localize": "^3.3.0",
     "react-native-mmkv": "^3.1.0",
@@ -46,7 +46,7 @@
     "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2",
+    "react-native-webview": "13.12.5",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
